# audacity

libraries/lib-cloud-audiocom/: UserService.cpp
libraries/lib-ffmpeg-support/: FFmpegFunctions.cpp
libraries/lib-files/: PathList.cpp  TempDirectory.cpp
libraries/lib-module-manager/: PluginHost.cpp
libraries/lib-preferences/: FileConfig.cpp  FileConfig.h  Prefs.cpp  Prefs.h
libraries/lib-project/: CMakeLists.txt  ProjectQMLEnvironment.cpp  ProjectQMLEnvironment.h
libraries/lib-registries/: Registry.h
libraries/lib-tags/: Tags.cpp
libraries/lib-theme/: Theme.cpp
libraries/lib-wx-init/: HelpText.cpp  Journal.cpp  SelectFile.cpp
src/: AudacityApp.cpp  AudacityFileConfig.cpp  AudacityFileConfig.h  AudioPasteDialog.cpp  LabelDialog.cpp  LabelTrack.cpp  TagsEditor.cpp
src/qt/: AudacityQtConfig.h  CMakeLists.txt  main.cpp
src/qt/numeric-formats/: CMakeLists.txt  NumericConverterFormatterAdapter.cpp  NumericConverterFormatterAdapterFactory.cpp
src/qt/numeric-formats/qml/: TimecodeControl.qml
src/qt/qml/: TimeToolbar.qml
src/qt/uicomponents/: ApplicationConfiguration.cpp  CMakeLists.txt
tests/: MockedPrefs.cpp  MockedPrefs.h
